--- a/pom.xml
+++ b/pom.xml
@@ -2,10 +2,10 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>dubbo</groupId>
-	<artifactId>eleme-user-core</artifactId>
+	<artifactId>eleme-user-all</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>eleme-user-core</name>
-	<description>eleme-user-core</description>
+	<name>eleme-user-all</name>
+	<description>eleme-user-all</description>
 	<packaging>pom</packaging>
 
 	<properties>
