--- a/eleme-user-server/src/main/resources/application.properties
+++ b/eleme-user-server/src/main/resources/application.properties
@@ -1,5 +1,27 @@
-rmq.host = vpca-scm-cashier-basictools-1.vm.elenet.me
-rmq.port = 5672
-rmq.virtualhost = cenarius
-rmq.username = admin
-rmq.password = admin
+# dev environment
+
+# database
+db.driver=com.mysql.jdbc.Driver
+db.url=jdbc:mysql://localhost:3306/db_test?useUnicode=true&characterEncoding=utf8
+db.username=root
+db.password=root
+
+# redis
+redis.pool.maxActive=2000 
+redis.pool.maxIdle=500
+redis.pool.maxWait=10000 
+redis.pool.testOnBorrow=true 
+redis.port=6379 
+redis.hostname=
+redis.password=
+
+# mongo
+
+# rabbitmq
+rmq.host=
+rmq.port=
+rmq.virtualhost=
+rmq.username=
+rmq.password=
+
+
