--- a/eleme-user-controller/pom.xml
+++ b/eleme-user-controller/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>dubbo</groupId>
+		<groupId>jwcms</groupId>
 		<artifactId>eleme-user-all</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -18,7 +18,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>dubbo</groupId>
+			<groupId>jwcms</groupId>
 			<artifactId>eleme-user</artifactId>
 			<version>${project.version}</version>
 		</dependency>
