--- a/eleme-user-server/src/main/resources/application.properties
+++ b/eleme-user-server/src/main/resources/application.properties
@@ -1,10 +1,11 @@
-# dev environment
+# development environment configuration
 
 # database
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://localhost:3306/db_test?useUnicode=true&characterEncoding=utf8
 db.username=root
 db.password=root
+
 
 # redis
 redis.pool.maxActive=2000 
@@ -15,13 +16,15 @@ redis.port=6379
 redis.hostname=
 redis.password=
 
-# mongo
+
+# mongodb
+mongodb.username=
+mongodb.password=
+
 
 # rabbitmq
-rmq.host=
-rmq.port=
-rmq.virtualhost=
-rmq.username=
-rmq.password=
-
-
+rabbitmq.host=
+rabbitmq.port=
+rabbitmq.virtualhost=
+rabbitmq.username=
+rabbitmq.password=
