--- a/eleme-user-service/pom.xml
+++ b/eleme-user-service/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>dubbo</groupId>
+		<groupId>jwcms</groupId>
 		<artifactId>eleme-user-all</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -26,7 +26,7 @@
 	<dependencies>
 
 		<dependency>
-			<groupId>dubbo</groupId>
+			<groupId>jwcms</groupId>
 			<artifactId>eleme-user</artifactId>
 			<version>${project.version}</version>
 		</dependency>
@@ -35,31 +35,7 @@
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-mongodb</artifactId>
 			<version>${mongo.version}</version>
-			<!-- <exclusions>
-				<exclusion>
-					<artifactId>spring-core</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-aop</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-tx</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-				<exclusion>
-					<artifactId>spring-context</artifactId>
-					<groupId>org.springframework</groupId>
-				</exclusion>
-			</exclusions> -->
 		</dependency>
-		
-		<!-- <dependency>
-			<groupId>log4j</groupId>
-			<artifactId>log4j</artifactId>
-			<version>1.2.17</version>
-		</dependency> -->
 		
 		<!-- mysql -->
 		<dependency>
@@ -68,14 +44,14 @@
 			<version>${mysql.version}</version>
 		</dependency>
 		
-		<!-- datebase c3p0 pool -->
+		<!-- c3p0 -->
 		<dependency>
 			<groupId>c3p0</groupId>
 			<artifactId>c3p0</artifactId>
 			<version>${c3p0.version}</version>
 		</dependency>
 		
-		<!--mapper & pagehelper -->
+		<!-- mapper & pagehelper -->
 		<dependency>
 			<groupId>tk.mybatis</groupId>
 			<artifactId>mapper</artifactId>
