--- a/eleme-user/pom.xml
+++ b/eleme-user/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<parent>
-		<groupId>dubbo</groupId>
+		<groupId>jwcms</groupId>
 		<artifactId>eleme-user-all</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
 	</parent>
@@ -13,7 +13,7 @@
 
 	<dependencies>
 		<dependency>
-			<groupId>dubbo</groupId>
+			<groupId>jwcms</groupId>
 			<artifactId>eleme-user-common</artifactId>
 			<version>${project.version}</version>
 		</dependency>
