--- a/eleme-user-server/src/main/resources/dubbo.properties
+++ b/eleme-user-server/src/main/resources/dubbo.properties
@@ -1,8 +1,6 @@
-#alpha stable
-soa.order.client.providerList=192.168.113.194:8926
+dubbo.application.name=dubbo_demo_provider
+dubbo.registry.address=127.0.0.1:2181
+dubbo.protocol.name=dubbo
+dubbo.protocol.port=20880
 
-#beta
-
-#prdt
-
-
+dubbo.own.version=0.0.1
