--- a/eleme-user-server/pom.xml
+++ b/eleme-user-server/pom.xml
@@ -10,7 +10,7 @@
 	<name>eleme-user-server</name>
 	<description>eleme-user-server</description>
 	<packaging>jar</packaging>
-	
+
 	<properties>
 		<appid>eleme.user.server</appid>
 	</properties>
@@ -23,19 +23,40 @@
 		</dependency>
 	</dependencies>
 
-	<!-- <build>
+	<!-- <build> <plugins> <plugin> <artifactId>maven-assembly-plugin</artifactId> 
+		<version>2.6</version> <configuration> <appendAssemblyId>false</appendAssemblyId> 
+		<finalName>eleme-user</finalName> <descriptors> <descriptor>XXXXX</descriptor> 
+		</descriptors> </configuration> <executions> <execution> <id>make-assembly</id> 
+		<phase>package</phase> <goals> <goal>single</goal> </goals> </execution> 
+		</executions> </plugin> </plugins> </build> -->
+
+	<!-- <build> <sourceDirectory>src/main/java</sourceDirectory> <plugins> 
+		<plugin> <groupId>org.apache.maven.plugins</groupId> <artifactId>maven-jar-plugin</artifactId> 
+		<configuration> <archive> <manifest> <mainClass>ctas.importer.reader.app.Program</mainClass> 
+		<addClasspath>true</addClasspath> <classpathPrefix>lib/</classpathPrefix> 
+		</manifest> </archive> <classesDirectory> </classesDirectory> </configuration> 
+		</plugin> </plugins> </build> -->
+
+	<build>
 		<plugins>
 			<plugin>
 				<artifactId>maven-assembly-plugin</artifactId>
-				<version>2.6</version>
+				<version>2.5.4</version>
 				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>jwcms.server.Bootstrap</mainClass>
+						</manifest>
+					</archive>
+					<!-- <descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs> -->
 					<appendAssemblyId>false</appendAssemblyId>
 					<finalName>eleme-user</finalName>
 					<descriptors>
-						<descriptor>XXXXX</descriptor>
+						<descriptor>${project.basedir}/package.xml</descriptor>
 					</descriptors>
 				</configuration>
-
 				<executions>
 					<execution>
 						<id>make-assembly</id>
@@ -46,27 +67,19 @@
 					</execution>
 				</executions>
 			</plugin>
-		</plugins>
-	</build> -->
-	
-	<build>
-		<sourceDirectory>src/main/java</sourceDirectory>
-		<plugins>
-			<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-jar-plugin</artifactId>
-    <configuration>
-        <archive>
-            <manifest>
-                <mainClass>ctas.importer.reader.app.Program</mainClass>
-                <addClasspath>true</addClasspath>
-                <classpathPrefix>lib/</classpathPrefix>
-            </manifest>
-        </archive>
-        <classesDirectory>
-        </classesDirectory>
-    </configuration>
-</plugin>
+			<!-- <plugin>
+				<artifactId>maven-assembly-plugin</artifactId>
+				<configuration>
+					<archive>
+						<manifest>
+							<mainClass>jwcms.server.Bootstrap</mainClass>
+						</manifest>
+					</archive>
+					<descriptorRefs>
+						<descriptorRef>jar-with-dependencies</descriptorRef>
+					</descriptorRefs>
+				</configuration>
+			</plugin> -->
 		</plugins>
 	</build>
 
