--- a/eleme-user-server/.project
+++ b/eleme-user-server/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>eleme-user-server</name>
+	<name>eleme-user-startup</name>
 	<comment></comment>
 	<projects>
 	</projects>
