--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,8 @@
 
 		<logback.version>1.1.6</logback.version>
 		<logback-ext-spring.version>0.1.2</logback-ext-spring.version>
+		
+		<alibaba.dubbo.version>2.8.4a</alibaba.dubbo.version>
 	</properties>
 
 	<modules>
@@ -156,17 +158,17 @@
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo</artifactId>
-			<version>2.8.4a</version>
+			<version>${alibaba.dubbo.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo-rpc-rest</artifactId>
-			<version>2.8.4a</version>
+			<version>${alibaba.dubbo.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>com.alibaba</groupId>
 			<artifactId>dubbo-rpc-webservice</artifactId>
-			<version>2.8.4a</version>
+			<version>${alibaba.dubbo.version}</version>
 		</dependency>
 
 
