--- a/eleme-user-common/pom.xml
+++ b/eleme-user-common/pom.xml
@@ -14,7 +14,7 @@
 	
 	<properties>
 		<apache.poi.version>3.10-FINAL</apache.poi.version>
-		<freemarker.version>2.3.9</freemarker.version>
+		<freemarker.version>2.3.26-incubating</freemarker.version>
 	</properties>
 
 	<dependencies>
